@@ -1055,298 +1055,6 @@ do {                                                                            
     }                                                                            \
 } while (0)
 
-#define __FIID_OBJ_SET_UDM_ERRNUM(___obj)          \
-do {                                               \
-  int32_t __errnum = fiid_obj_errnum((___obj));    \
-  if (__errnum == FIID_ERR_SUCCESS)                \
-    dev->errnum = IPMI_ERR_SUCCESS;                \
-  else if (__errnum == FIID_ERR_OUTMEM)            \
-    dev->errnum = IPMI_ERR_OUT_OF_MEMORY;          \
-  else                                             \
-    dev->errnum = IPMI_ERR_INTERNAL_LIBRARY_ERROR; \
-} while (0)
-
-#define UDM_FIID_TEMPLATE_LEN_BYTES(__len, __tmpl)          \
-do {                                                        \
-  if (((__len) = fiid_template_len_bytes ((__tmpl))) < 0)   \
-    {                                                       \
-      __FIID_SYSLOG;                                        \
-      __FIID_TRACE;                                         \
-      __ERRNO_TO_UDM_ERRNUM;                                \
-      return (-1);                                          \
-    }                                                       \
-} while (0)
-
-#define UDM_FIID_TEMPLATE_LEN_BYTES_CLEANUP(__len, __tmpl)  \
-do {                                                        \
-  if (((__len) = fiid_template_len_bytes ((__tmpl))) < 0)   \
-    {                                                       \
-      __FIID_SYSLOG;                                        \
-      __FIID_TRACE;                                         \
-      __ERRNO_TO_UDM_ERRNUM;                                \
-      goto cleanup;                                         \
-    }                                                       \
-} while (0)
-
-#define UDM_FIID_TEMPLATE_FREE_NO_RETURN(__tmpl)   FIID_TEMPLATE_FREE_NO_RETURN(__tmpl)
-
-#define UDM_FIID_OBJ_CREATE(__obj, __tmpl)          \
-do {                                                \
-  if (!((__obj) = fiid_obj_create(__tmpl)))         \
-    {                                               \
-      __FIID_SYSLOG;                                \
-      __FIID_TRACE;                                 \
-      dev->errnum = IPMI_ERR_OUT_OF_MEMORY;         \
-      return (-1);                                  \
-    }                                               \
-} while (0)
-
-#define UDM_FIID_OBJ_CREATE_CLEANUP(__obj, __tmpl)  \
-do {                                                \
-  if (!((__obj) = fiid_obj_create(__tmpl)))         \
-    {                                               \
-      __FIID_SYSLOG;                                \
-      __FIID_TRACE;                                 \
-      dev->errnum = IPMI_ERR_OUT_OF_MEMORY;         \
-      goto cleanup;                                 \
-    }                                               \
-} while (0)
-
-#define UDM_FIID_OBJ_DESTROY(__obj)            \
-do {                                           \
- if ((__obj))                                  \
-   {                                           \
-     if (fiid_obj_destroy((__obj)) < 0)        \
-       {                                       \
-         __FIID_OBJ_SYSLOG((__obj));           \
-         __FIID_OBJ_TRACE((__obj));            \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));   \
-         return (-1);                          \
-       }                                       \
-   }                                           \
-} while (0)
-
-#define UDM_FIID_OBJ_DESTROY_NO_RETURN(__obj)      FIID_OBJ_DESTROY_NO_RETURN(__obj)
-
-#define UDM_FIID_OBJ_LEN_BYTES(__len, __obj)             \
-do {                                                     \
-    if (((__len) = fiid_obj_len_bytes ((__obj))) < 0)    \
-      {                                                  \
-         __FIID_OBJ_SYSLOG((__obj));                     \
-         __FIID_OBJ_TRACE((__obj));                      \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));             \
-         return (-1);                                    \
-      }                                                  \
-} while (0)
-
-#define UDM_FIID_OBJ_LEN_BYTES_CLEANUP(__len, __obj)     \
-do {                                                     \
-    if (((__len) = fiid_obj_len_bytes ((__obj))) < 0)    \
-      {                                                  \
-         __FIID_OBJ_SYSLOG((__obj));                     \
-         __FIID_OBJ_TRACE((__obj));                      \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));             \
-         goto cleanup;                                   \
-      }                                                  \
-} while (0)
-
-#define UDM_FIID_OBJ_CLEAR(__obj)                        \
-do {                                                     \
-    if (fiid_obj_clear ((__obj)) < 0)                    \
-      {                                                  \
-         __FIID_OBJ_SYSLOG((__obj));                     \
-         __FIID_OBJ_TRACE((__obj));                      \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));             \
-         return (-1);                                    \
-      }                                                  \
-} while (0)
-
-#define UDM_FIID_OBJ_SET_ALL(__obj, __data, __data_len)                     \
-do {                                                                        \
-    if (fiid_obj_set_all ((__obj), (__data), (__data_len)) < 0)             \
-      {                                                                     \
-         __FIID_OBJ_SYSLOG((__obj));                                        \
-         __FIID_OBJ_TRACE((__obj));                                         \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                \
-         return (-1);                                                       \
-      }                                                                     \
-} while (0)
-
-#define UDM_FIID_OBJ_SET_ALL_CLEANUP(__obj, __data, __data_len)             \
-do {                                                                        \
-    if (fiid_obj_set_all ((__obj), (__data), (__data_len)) < 0)             \
-      {                                                                     \
-         __FIID_OBJ_SYSLOG((__obj));                                        \
-         __FIID_OBJ_TRACE((__obj));                                         \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                \
-         goto cleanup;                                                      \
-      }                                                                     \
-} while (0)
-
-#define UDM_FIID_OBJ_GET(__obj, __field, __val)               \
-do {                                                          \
-    uint64_t __localval = 0, *__localval_ptr;                 \
-    __localval_ptr = (__val);                                 \
-    if (fiid_obj_get ((__obj), (__field), &__localval) < 0)   \
-      {                                                       \
-         __FIID_OBJ_SYSLOG((__obj));                          \
-         __FIID_OBJ_TRACE((__obj));                           \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                  \
-         return (-1);                                         \
-      }                                                       \
-    *__localval_ptr = __localval;                             \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_CLEANUP(__obj, __field, __val)       \
-do {                                                          \
-    uint64_t __localval = 0, *__localval_ptr;                 \
-    __localval_ptr = (__val);                                 \
-    if (fiid_obj_get ((__obj), (__field), &__localval) < 0)   \
-      {                                                       \
-         __FIID_OBJ_SYSLOG((__obj));                          \
-         __FIID_OBJ_TRACE((__obj));                           \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                  \
-         goto cleanup;                                        \
-      }                                                       \
-    *__localval_ptr = __localval;                             \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_DATA(__obj, __field, __data, __data_len)            \
-do {                                                                         \
-    if (fiid_obj_get_data ((__obj), (__field), (__data), (__data_len)) < 0)  \
-      {                                                                      \
-         __FIID_OBJ_SYSLOG((__obj));                                         \
-         __FIID_OBJ_TRACE((__obj));                                          \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                 \
-         return (-1);                                                        \
-      }                                                                      \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_DATA_CLEANUP(__obj, __field, __data, __data_len)    \
-do {                                                                         \
-    if (fiid_obj_get_data ((__obj), (__field), (__data), (__data_len)) < 0)  \
-      {                                                                      \
-         __FIID_OBJ_SYSLOG((__obj));                                         \
-         __FIID_OBJ_TRACE((__obj));                                          \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                 \
-         goto cleanup;                                                       \
-      }                                                                      \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_ALL(__obj, __data, __data_len)                      \
-do {                                                                         \
-    if (fiid_obj_get_all ((__obj), (__data), (__data_len)) < 0)              \
-      {                                                                      \
-         __FIID_OBJ_SYSLOG((__obj));                                         \
-         __FIID_OBJ_TRACE((__obj));                                          \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                 \
-         return (-1);                                                        \
-      }                                                                      \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_ALL_CLEANUP(__obj, __data, __data_len)              \
-do {                                                                         \
-    if (fiid_obj_get_all ((__obj), (__data), (__data_len)) < 0)              \
-      {                                                                      \
-         __FIID_OBJ_SYSLOG((__obj));                                         \
-         __FIID_OBJ_TRACE((__obj));                                          \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                 \
-         goto cleanup;                                                       \
-      }                                                                      \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_ALL_LEN(__len, __obj, __data, __data_len)          \
-do {                                                                        \
-    if (((__len) = fiid_obj_get_all ((__obj), (__data), (__data_len))) < 0) \
-      {                                                                     \
-         __FIID_OBJ_SYSLOG((__obj));                                        \
-         __FIID_OBJ_TRACE((__obj));                                         \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                \
-         return (-1);                                                       \
-      }                                                                     \
-} while (0)
-
-#define UDM_FIID_OBJ_GET_ALL_LEN_CLEANUP(__len, __obj, __data, __data_len)  \
-do {                                                                        \
-    if (((__len) = fiid_obj_get_all ((__obj), (__data), (__data_len))) < 0) \
-      {                                                                     \
-         __FIID_OBJ_SYSLOG((__obj));                                        \
-         __FIID_OBJ_TRACE((__obj));                                         \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                                \
-         goto cleanup;                                                      \
-      }                                                                     \
-} while (0)
-
-#define UDM_FIID_OBJ_PACKET_VALID(__obj)               \
-do {                                                   \
-    int __ret;                                         \
-    if ((__ret = fiid_obj_packet_valid((__obj))) < 0)  \
-      {                                                \
-        __FIID_OBJ_SYSLOG((__obj));                    \
-        __FIID_OBJ_TRACE((__obj));                     \
-	__FIID_OBJ_SET_UDM_ERRNUM((__obj));            \
-        return (-1);                                   \
-      }                                                \
-    if (!__ret)                                        \
-      {                                                \
-        __FIID_OBJ_SYSLOG((__obj));                    \
-        __FIID_OBJ_TRACE((__obj));                     \
-        dev->errnum = IPMI_ERR_INVALID_PARAMETERS;     \
-	return (-1);                                   \
-      }                                                \
-} while (0)
-
-#define UDM_FIID_OBJ_TEMPLATE_CLEANUP(__ptr, __obj)    \
-do {                                                   \
-    if (!(__ptr = fiid_obj_template((__obj))))         \
-      {                                                \
-        __FIID_OBJ_SYSLOG((__obj));                    \
-        __FIID_OBJ_TRACE((__obj));                     \
-	__FIID_OBJ_SET_UDM_ERRNUM((__obj));            \
-        goto cleanup;                                  \
-      }                                                \
-} while (0)
-
-#define UDM_FIID_OBJ_TEMPLATE_COMPARE(__obj, __tmpl)                 \
-do {                                                                 \
-    int __ret;                                                       \
-    if ((__ret = fiid_obj_template_compare ((__obj), (__tmpl))) < 0) \
-      {                                                              \
-         __FIID_OBJ_SYSLOG((__obj));                                 \
-         __FIID_OBJ_TRACE((__obj));                                  \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                         \
-         return (-1);                                                \
-      }                                                              \
-    if (!__ret)                                                      \
-      {                                                              \
-	errno = EINVAL;                                              \
-         __FIID_OBJ_SYSLOG((__obj));                                 \
-         __FIID_OBJ_TRACE((__obj));                                  \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                         \
-	return (-1);                                                 \
-      }                                                              \
-} while (0)
-
-#define UDM_FIID_OBJ_TEMPLATE_COMPARE_CLEANUP(__obj, __tmpl)         \
-do {                                                                 \
-    int __ret;                                                       \
-    if ((__ret = fiid_obj_template_compare ((__obj), (__tmpl))) < 0) \
-      {                                                              \
-         __FIID_OBJ_SYSLOG((__obj));                                 \
-         __FIID_OBJ_TRACE((__obj));                                  \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                         \
-         goto cleanup;                                               \
-      }                                                              \
-    if (!__ret)                                                      \
-      {                                                              \
-	errno = EINVAL;                                              \
-         __FIID_OBJ_SYSLOG((__obj));                                 \
-         __FIID_OBJ_TRACE((__obj));                                  \
-         __FIID_OBJ_SET_UDM_ERRNUM((__obj));                         \
-	goto cleanup;                                                \
-      }                                                              \
-} while (0)
-
 #ifdef __cplusplus
 }
 #endif
